simplificación de lógica en funciones y finalización de pick_wine

--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -41,6 +41,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84868876",
+   "metadata": {},
+   "source": [
+    "### user input"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 587,
    "id": "4b705032",
@@ -201,33 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
-   "id": "79ae3409",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Transforma df escalando los gustos y agregando columna \"Otras Uvas\"\n",
-    "\n",
-    "def transform_df(df, grapes, top_grapes):\n",
-    "    tra_df = df.copy()\n",
-    "\n",
-    "    # Scaling de sabores\n",
-    "    scaler = MinMaxScaler()\n",
-    "    \n",
-    "    taste_features = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
-    "    scaled_tastes = [taste + \"_scld\" for taste in taste_features]\n",
-    "    tra_df[scaled_tastes] = scaler.fit_transform(tra_df[taste_features])\n",
-    "    \n",
-    "    # Columna Otras Uvas\n",
-    "    other_grapes = [grape for grape in grapes if grape not in top_grapes]\n",
-    "    tra_df[\"Otras Uvas\"] = tra_df[other_grapes].max(axis=1)\n",
-    "    \n",
-    "    return tra_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 750,
    "id": "9f95fb67",
    "metadata": {},
    "outputs": [],
@@ -265,7 +247,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": 809,
+   "id": "d957793e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funciones auxiliares para transformar df\n",
+    "def df_add_scaled_tastes(df, taste_features):\n",
+    "    copy_df = df.copy()\n",
+    "    # Scaling de sabores\n",
+    "    scaler = MinMaxScaler()\n",
+    "    scaled_tastes = [taste + \"_scld\" for taste in taste_features]\n",
+    "    copy_df[scaled_tastes] = scaler.fit_transform(copy_df[taste_features])\n",
+    "    return copy_df\n",
+    "\n",
+    "def df_add_other_grapes(df, grapes, top_grapes):\n",
+    "    copy_df = df.copy()\n",
+    "    # Columna Otras Uvas\n",
+    "    other_grapes = [grape for grape in grapes if grape not in top_grapes]\n",
+    "    copy_df[\"Otras Uvas\"] = copy_df[other_grapes].max(axis=1)\n",
+    "    return copy_df\n",
+    "\n",
+    "def df_add_qual_price(df):\n",
+    "    copy_df = df.copy()\n",
+    "    # Zscore quality/price\n",
+    "    copy_df['rating_zscore'] = stats.zscore(copy_df[\"rating\"])\n",
+    "    copy_df['price_zscore'] = stats.zscore(copy_df[\"price\"])\n",
+    "    copy_df[\"zscore_quality_price\"] = copy_df['rating_zscore'] - copy_df['price_zscore']\n",
+    "    qual_price_min = copy_df[\"zscore_quality_price\"].min()\n",
+    "    qual_price_max = copy_df[\"zscore_quality_price\"].max()\n",
+    "    copy_df[\"zscore_quality_price_scld\"] = (copy_df[\"zscore_quality_price\"] - qual_price_min)/(qual_price_max - qual_price_min)\n",
+    "    return copy_df\n",
+    "\n",
+    "def df_add_user_similarity(df, scaled_tastes, user_tastes):\n",
+    "    copy_df = df.copy()\n",
+    "    # User similarity (Fuzzy Distance)\n",
+    "    distances = compute_fuzzy_distance(user_tastes, copy_df[scaled_tastes])\n",
+    "    copy_df[\"user_similarity\"] = 1 - (distances / distances.max())\n",
+    "    return copy_df\n",
+    "\n",
+    "def df_add_wine_score(df, user_input):\n",
+    "    copy_df = df.copy()\n",
+    "    # User Weights\n",
+    "    user_weights = user_input.get(\"weights\")\n",
+    "    rating_w = user_weights.get(\"rating\")\n",
+    "    price_quality_w = user_weights.get(\"price_quality\")\n",
+    "    rating_qty_w = user_weights.get(\"rating_qty\")\n",
+    "    user_similarity_w = user_weights.get(\"user_similarity\")\n",
+    "    main_pairing_w = user_weights.get(\"main_pairing\")\n",
+    "    \n",
+    "    # Puntaje sintético del vino\n",
+    "    copy_df[\"wine_score\"] = (\n",
+    "        rating_w * (copy_df[\"rating\"] / 5) + \n",
+    "        price_quality_w * copy_df[\"zscore_quality_price_scld\"] + \n",
+    "        rating_qty_w * (copy_df[\"rating_qty\"] / copy_df[\"rating_qty\"].max()) +\n",
+    "        user_similarity_w * copy_df[\"user_similarity\"] + \n",
+    "        main_pairing_w * copy_df[user_input[\"main_pairing\"]]\n",
+    "    )\n",
+    "    return copy_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 810,
    "id": "ad8740bc",
    "metadata": {},
    "outputs": [],
@@ -279,14 +323,6 @@
     "    precio_max = user_input.get(\"precio_max\")\n",
     "    grape_list = user_input.get(\"grape_list\")\n",
     "    user_tastes = user_input.get(\"tastes\")\n",
-    "\n",
-    "    # User Weights\n",
-    "    user_weights = user_input.get(\"weights\")\n",
-    "    rating_w = user_weights.get(\"rating\")\n",
-    "    price_quality_w = user_weights.get(\"price_quality\")\n",
-    "    rating_qty_w = user_weights.get(\"rating_qty\")\n",
-    "    user_similarity_w = user_weights.get(\"user_similarity\")\n",
-    "    main_pairing_w = user_weights.get(\"main_pairing\")\n",
     "\n",
     "    # Filtro por pairings\n",
     "    if user_pairings is not None:\n",
@@ -302,25 +338,16 @@
     "    if grape_list is not None:\n",
     "        wine_base = wine_base[wine_base[grape_list].sum(axis=1)>0]\n",
     "\n",
-    "    # Zscore quality/price\n",
-    "    wine_base['rating_zscore'] = stats.zscore(wine_base[\"rating\"])\n",
-    "    wine_base['price_zscore'] = stats.zscore(wine_base[\"price\"])\n",
-    "    wine_base[\"zscore_quality_price\"] = wine_base['rating_zscore'] - wine_base['price_zscore']\n",
+    "    # Zscore quality/price local\n",
+    "    wine_base = df_add_qual_price(wine_base)\n",
     "\n",
     "    if len(wine_base) > 0:\n",
     "        # User similarity (Fuzzy Distance)\n",
     "        scaled_tastes = [\"body_scld\", \"tannis_scld\", \"sweetness_scld\", \"acidity_scld\"]\n",
-    "        distances = compute_fuzzy_distance(user_tastes, wine_base[scaled_tastes])\n",
-    "        wine_base[\"user_similarity\"] = 1 - (distances / distances.max())\n",
+    "        wine_base = df_add_user_similarity(wine_base, scaled_tastes, user_tastes)\n",
     "\n",
-    "        # Puntaje sintético del vino\n",
-    "        wine_base[\"wine_score\"] = (\n",
-    "            rating_w * (wine_base[\"rating\"] / 5) + \n",
-    "            price_quality_w * (wine_base[\"zscore_quality_price\"] / wine_base[\"zscore_quality_price\"].max()) + \n",
-    "            rating_qty_w * (wine_base[\"rating_qty\"] / wine_base[\"rating_qty\"].max()) +\n",
-    "            user_similarity_w * wine_base[\"user_similarity\"] + \n",
-    "            main_pairing_w * wine_base[user_input[\"main_pairing\"]]\n",
-    "        )\n",
+    "        # Puntaje sintético local del vino\n",
+    "        wine_base = df_add_wine_score(wine_base, user_input)\n",
     "\n",
     "        # Selección de uno de los mejores top_n vinos\n",
     "        top_wine_base = wine_base.nlargest(top_n, \"wine_score\")\n",
@@ -346,24 +373,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 805,
    "id": "41a09354",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'meal': 'Paella de Mariscos',\n",
-       " 'main_pairing': 'shellfish',\n",
-       " 'pairing_list': ['shellfish'],\n",
-       " 'grape_list': ['Cabernet Franc', 'Otras Uvas'],\n",
-       " 'precio_min': 15,\n",
-       " 'precio_max': 27,\n",
-       " 'tastes': {'body': [np.float64(0.31244525547445257),\n",
-       "   np.float64(0.37956204379562053)],\n",
-       "  'tannis': [np.float64(0.4109496906107075), np.float64(0.4526499865482916)],\n",
-       "  'sweetness': [np.float64(0.0), np.float64(0.17019774011299438)],\n",
-       "  'acidity': [np.float64(0.7725343962967726), np.float64(0.9601388710299601)]},\n",
+       "{'meal': 'Matambre a la Pizza',\n",
+       " 'main_pairing': 'pork',\n",
+       " 'pairing_list': ['mild and soft cheese', 'pork'],\n",
+       " 'grape_list': ['Malbec', 'Otras Uvas'],\n",
+       " 'precio_min': 18,\n",
+       " 'precio_max': 34,\n",
+       " 'tastes': {'body': [np.float64(0.18189781021897816),\n",
+       "   np.float64(0.5168978102189782)],\n",
+       "  'tannis': [np.float64(0.4526499865482916), np.float64(0.8318536454129674)],\n",
+       "  'sweetness': [np.float64(0.35640301318267426),\n",
+       "   np.float64(0.44067796610169496)],\n",
+       "  'acidity': [np.float64(0.041018387553041005),\n",
+       "   np.float64(0.3692619261926192)]},\n",
        " 'weights': {'rating': 0.25,\n",
        "  'price_quality': 0.25,\n",
        "  'rating_qty': 0.1,\n",
@@ -371,7 +400,7 @@
        "  'main_pairing': 0.1}}"
       ]
      },
-     "execution_count": 709,
+     "execution_count": 805,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
+   "execution_count": 825,
    "id": "187a74d1",
    "metadata": {},
    "outputs": [
@@ -447,27 +476,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name                    Sauvignon Blanc\n",
-      "year                             2022.0\n",
-      "price                             17.99\n",
-      "rating                              4.0\n",
-      "rating_qty                         30.0\n",
-      "body_scld                      0.379562\n",
-      "tannis_scld                     0.45265\n",
-      "sweetness_scld                 0.608051\n",
-      "acidity_scld                   0.560627\n",
-      "rating_zscore                  0.922777\n",
-      "price_zscore                  -0.440366\n",
-      "zscore_quality_price           1.363143\n",
-      "wine_score                     0.634764\n",
-      "Name: 1759, dtype: object\n"
+      "name                           Malbec\n",
+      "year                           2020.0\n",
+      "price                           20.68\n",
+      "rating                            4.3\n",
+      "rating_qty                     2516.0\n",
+      "body_scld                    0.689197\n",
+      "tannis_scld                  0.398036\n",
+      "sweetness_scld               0.504237\n",
+      "acidity_scld                 0.364022\n",
+      "rating_zscore                1.773712\n",
+      "price_zscore                 -0.71132\n",
+      "zscore_quality_price_scld    0.931643\n",
+      "wine_score                   0.796058\n",
+      "Name: 1239, dtype: object\n"
      ]
     }
    ],
    "source": [
     "top_grapes = list(get_top_grapes(grape_selection, 8).index)\n",
     "\n",
-    "tra_wines = transform_df(wines_df, grape_selection, top_grapes)\n",
+    "tra_wines = df_add_scaled_tastes(wines_df, [\"body\", \"tannis\", \"sweetness\", \"acidity\"])\n",
+    "\n",
+    "tra_wines = df_add_other_grapes(tra_wines, grape_selection, top_grapes)\n",
+    "\n",
+    "tra_wines = df_add_qual_price(tra_wines)\n",
+    "\n",
+    "tra_wines = df_add_user_similarity(tra_wines, scld_taste_columns, user_input.get(\"tastes\"))\n",
+    "\n",
+    "tra_wines = df_add_wine_score(tra_wines, user_input)\n",
+    "\n",
+    "# Renombro las columnas con escala para saber que son a nivel global (todo el dataset) y no local (según filtros de usuario)\n",
+    "cols_to_rename = ['rating_zscore', 'price_zscore', 'zscore_quality_price', 'zscore_quality_price_scld', 'user_similarity', 'wine_score']\n",
+    "renamed_cols = [col_name + \"_glb\" for col_name in cols_to_rename]\n",
+    "renaming_dict = dict(zip(cols_to_rename,renamed_cols))\n",
+    "tra_wines = tra_wines.rename(columns=renaming_dict)\n",
     "\n",
     "selected_wine = pick_wine(tra_wines, user_input, top_n=20)\n",
     "\n",
@@ -478,30 +521,55 @@
     "    \"name\", \"year\", \"price\", \"rating\",\n",
     "    \"rating_qty\", \"body_scld\", \"tannis_scld\",\n",
     "    \"sweetness_scld\", \"acidity_scld\", \"rating_zscore\",\n",
-    "    \"price_zscore\", \"zscore_quality_price\", \"wine_score\"]\n",
+    "    \"price_zscore\", \"zscore_quality_price_scld\", \"wine_score\"]\n",
     "    print(selected_wine[display_columns])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 826,
+   "id": "ca8906ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['body_scld', 'tannis_scld', 'sweetness_scld', 'acidity_scld',\n",
+       "       'Otras Uvas', 'rating_zscore_glb', 'price_zscore_glb',\n",
+       "       'zscore_quality_price_glb', 'zscore_quality_price_scld_glb',\n",
+       "       'user_similarity_glb', 'wine_score_glb'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 826,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tra_wines.columns[-11:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 793,
    "id": "b0ac5f36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'body': ('intenso',\n",
-       "  [np.float64(0.7458394160583942), np.float64(1.0000000000000002)]),\n",
-       " 'tannis': ('moderado',\n",
-       "  [np.float64(0.3271455474845305), np.float64(0.42601560398170557)]),\n",
+       "{'body': ('marcado',\n",
+       "  [np.float64(0.18408759124087598), np.float64(0.38273722627737233)]),\n",
+       " 'tannis': ('marcado',\n",
+       "  [np.float64(0.4109496906107075), np.float64(0.4829835889157922)]),\n",
        " 'sweetness': ('marcado',\n",
-       "  [np.float64(0.4300847457627119), np.float64(0.49576271186440685)]),\n",
-       " 'acidity': ('marcado',\n",
-       "  [np.float64(0.4415584415584416), np.float64(0.5232094638035232)])}"
+       "  [np.float64(0.3520480225988701), np.float64(0.39389124293785316)]),\n",
+       " 'acidity': ('moderado',\n",
+       "  [np.float64(0.470907805066221), np.float64(0.8321975054648321)])}"
       ]
      },
-     "execution_count": 589,
+     "execution_count": 793,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 747,
    "id": "3aa76cd5",
    "metadata": {},
    "outputs": [
@@ -552,38 +620,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0.00</th>\n",
-       "      <td>0.236496</td>\n",
-       "      <td>0.168415</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.292786</td>\n",
+       "      <td>0.168415</td>\n",
+       "      <td>0.094868</td>\n",
+       "      <td>0.436672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.25</th>\n",
-       "      <td>0.422628</td>\n",
+       "      <td>0.070073</td>\n",
        "      <td>0.333468</td>\n",
-       "      <td>0.194680</td>\n",
-       "      <td>0.487720</td>\n",
+       "      <td>0.231815</td>\n",
+       "      <td>0.470908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.50</th>\n",
-       "      <td>0.504234</td>\n",
-       "      <td>0.421711</td>\n",
-       "      <td>0.323682</td>\n",
-       "      <td>0.583644</td>\n",
+       "      <td>0.184088</td>\n",
+       "      <td>0.410950</td>\n",
+       "      <td>0.352048</td>\n",
+       "      <td>0.832198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.75</th>\n",
-       "      <td>0.559270</td>\n",
-       "      <td>0.541297</td>\n",
-       "      <td>0.425141</td>\n",
-       "      <td>0.660666</td>\n",
+       "      <td>0.382737</td>\n",
+       "      <td>0.482984</td>\n",
+       "      <td>0.393891</td>\n",
+       "      <td>0.924457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1.00</th>\n",
-       "      <td>0.817810</td>\n",
-       "      <td>0.831854</td>\n",
-       "      <td>0.906309</td>\n",
-       "      <td>0.952681</td>\n",
+       "      <td>0.782774</td>\n",
+       "      <td>0.663707</td>\n",
+       "      <td>0.632533</td>\n",
+       "      <td>0.960139</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -591,20 +659,34 @@
       ],
       "text/plain": [
        "      body_scld  tannis_scld  sweetness_scld  acidity_scld\n",
-       "0.00   0.236496     0.168415        0.000000      0.292786\n",
-       "0.25   0.422628     0.333468        0.194680      0.487720\n",
-       "0.50   0.504234     0.421711        0.323682      0.583644\n",
-       "0.75   0.559270     0.541297        0.425141      0.660666\n",
-       "1.00   0.817810     0.831854        0.906309      0.952681"
+       "0.00   0.000000     0.168415        0.094868      0.436672\n",
+       "0.25   0.070073     0.333468        0.231815      0.470908\n",
+       "0.50   0.184088     0.410950        0.352048      0.832198\n",
+       "0.75   0.382737     0.482984        0.393891      0.924457\n",
+       "1.00   0.782774     0.663707        0.632533      0.960139"
       ]
      },
-     "execution_count": 574,
+     "execution_count": 747,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tra_wines[tra_wines[main_pairing]==1][[\"body_scld\",\"tannis_scld\",\"sweetness_scld\",\"acidity_scld\"]].quantile([0, .25, .5, .75, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae12e3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Normalizá los wine_scores:\n",
+    "# 2. Calculá el desvío entre lo local y lo global:\n",
+    "# 3. Aplicá una lógica tipo \"ajuste dinámico\":\n",
+    "# 4. Sumás todo con ruido:\n",
+    "# 5. Comparar prob like contra probabilidad random"
    ]
   },
   {
